* Release 7.0.0
	* Fixed Bug #128: Overhead from generating machine code throws off CPUID HZ
	* Fixed Bug #136: On non BeOS systems, calling sysinfo may open GUI program
	* Fixed Bug #138: Invalid escape sequences warn when building in Python 3.8
	* Fixed Bug #147: Remove extended_model and extended_family fields
	* Fixed Bug #146: CPUID family and model is wrong
	* Fixed Bug #144: Cache fields should be full ints instead of kb strings

06/11/2020 Release 6.0.0
	* Fixed Bug #140: The get_cache function has swapped fields
	* Fixed Bug #142: Remove empty and zeroed fields
	* Fixed Bug #115: Missing data on Ryzen CPUs
	* Fixed Bug #122: Rename fields to be more clear
	* Fixed Bug #125: Add option to return --version
 	* Fixed Bug #126: Make test suite also check SELinux
	* Fixed Bug #120: Make unit tests also test CPUID
	* Fixed Bug #69: Add s390x support

03/20/2019 Release 5.0.0
	* Fixed Bug #117: Remove PyInstaller hacks
	* Fixed Bug #108: Client script runs multiple times without __main__
	* Fixed Bug #113: Add option to return results in json
	* Fixed Bug #110: Always tries to run wmic in get_system_info.py

04/01/2018 Release 4.0.0
	* Fixed Bug #80: Broken when using Pyinstaller
	* Fixed Bug #77: Get L1, L2, and L3 cache info from lscpu
	* Fixed Bug #79: Byte formats are inconsistent
	* Fixed Bug #81: Byte formatter breaks on non strings
	* Fixed Bug #84: Fixed wrong setup of CPUID machine code and added more flags
	* Fixed Bug #88: Get Windows CPU info with wmic
	* Fixed Bug #94: Fails to detect winreg imported as _winreg in get_system_info
	* Fixed Bug #95: Include if Python is 32 or 64 bit in get_system_info
	* Fixed Bug #87: lscpu gets brand field twice
	* Fixed Bug #96: Include Python version in output
	* Fixed Bug #85: CPUID HZ measurement is scaled wrong
	* Fixed Bug #100: Officially drop support for Python 2.6
	* Fixed Bug #101: Made it only check the dmesg boot log on Linux
	* Fixed Bug #102: Parsing Haiku sysinfo fails

06/10/2017 Release 3.3.0