@@ -8,24 +8,24 @@ import helpers
 class MockASM(ASM):
 	is_first = False
 
-	def __init__(self, restype=None, argtypes=(), byte_code=[]):
-		super(MockASM, self).__init__(restype, argtypes, byte_code)
+	def __init__(self, restype=None, argtypes=(), machine_code=[]):
+		super(MockASM, self).__init__(restype, argtypes, machine_code)
 
 	def compile(self):
 		self.func = self.run
 
 	def run(self):
-		byte_code = tuple(self.byte_code)
+		machine_code = tuple(self.machine_code)
 
 		# get_max_extension_support
-		if byte_code == \
+		if machine_code == \
 			(b"\xB8\x00\x00\x00\x80" # mov ax,0x80000000
 			b"\x0f\xa2"               # cpuid
 			b"\xC3",):               # ret
 			return 0x8000001f
 
 		# get_cache
-		if byte_code == \
+		if machine_code == \
 			(b"\xB8\x06\x00\x00\x80"  # mov ax,0x80000006
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xC8"                # mov ax,cx
@@ -33,80 +33,80 @@ class MockASM(ASM):
 			return 0x2006140
 
 		# get_info
-		if byte_code == \
+		if machine_code == \
 			(b"\xB8\x01\x00\x00\x00",  # mov eax,0x1"
 			b"\x0f\xa2"                # cpuid
 			b"\xC3",):                # ret
 			return 0x800f82
 
 		# get_processor_brand
-		if byte_code == \
+		if machine_code == \
 			(b"\xB8\x02\x00\x00\x80",  # mov ax,0x80000002
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xC0"                # mov ax,ax
 			b"\xC3",):                 # ret
 			return 0x20444d41
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x02\x00\x00\x80",  # mov ax,0x80000002
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xD8"                # mov ax,bx
 			b"\xC3",):                 # ret
 			return 0x657a7952
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x02\x00\x00\x80",  # mov ax,0x80000002
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xC8"                # mov ax,cx
 			b"\xC3",):                 # ret
 			return 0x2037206e
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x02\x00\x00\x80",  # mov ax,0x80000002
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xD0"                # mov ax,dx
 			b"\xC3",):                 # ret
 			return 0x30303732
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x03\x00\x00\x80",  # mov ax,0x80000003
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xC0"                # mov ax,ax
 			b"\xC3",):                 # ret
 			return 0x69452058
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x03\x00\x00\x80",  # mov ax,0x80000003
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xD8"                # mov ax,bx
 			b"\xC3",):                 # ret
 			return 0x2d746867
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x03\x00\x00\x80",  # mov ax,0x80000003
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xC8"                # mov ax,cx
 			b"\xC3",):                 # ret
 			return 0x65726f43
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x03\x00\x00\x80",  # mov ax,0x80000003
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xD0"                # mov ax,dx
 			b"\xC3",):                 # ret
 			return 0x6f725020
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x04\x00\x00\x80",  # mov ax,0x80000004
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xC0"                # mov ax,ax
 			b"\xC3",):                 # ret
 			return 0x73736563
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x04\x00\x00\x80",  # mov ax,0x80000004
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xD8"                # mov ax,bx
 			b"\xC3",):                 # ret
 			return 0x2020726f
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x04\x00\x00\x80",  # mov ax,0x80000004
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xC8"                # mov ax,cx
 			b"\xC3",):                 # ret
 			return 0x20202020
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x04\x00\x00\x80",  # mov ax,0x80000004
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xD0"                # mov ax,dx
@@ -114,19 +114,19 @@ class MockASM(ASM):
 			return 0x202020
 
 		# get_vendor_id
-		if byte_code == \
+		if machine_code == \
 			(b"\x31\xC0",             # xor eax,eax
 			b"\x0F\xA2"               # cpuid
 			b"\x89\xD8"               # mov ax,bx
 			b"\xC3",):                # ret
 			return 0x68747541
-		elif byte_code == \
+		elif machine_code == \
 			(b"\x31\xC0",             # xor eax,eax
 			b"\x0f\xa2"               # cpuid
 			b"\x89\xC8"               # mov ax,cx
 			b"\xC3",):                # ret
 			return 0x444d4163
-		elif byte_code == \
+		elif machine_code == \
 			(b"\x31\xC0",             # xor eax,eax
 			b"\x0f\xa2"               # cpuid
 			b"\x89\xD0"               # mov ax,dx
@@ -134,39 +134,39 @@ class MockASM(ASM):
 			return 0x69746e65
 
 		# get_flags
-		if byte_code == \
+		if machine_code == \
 			(b"\xB8\x01\x00\x00\x00", # mov eax,0x1"
 			b"\x0f\xa2"               # cpuid
 			b"\x89\xD0"               # mov ax,dx
 			b"\xC3",):                 # ret
 			return 0x178bfbff
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x01\x00\x00\x00", # mov eax,0x1"
 			b"\x0f\xa2"               # cpuid
 			b"\x89\xC8"               # mov ax,cx
 			b"\xC3",):                # ret
 			return 0x7ed8320b
-		elif byte_code == \
+		elif machine_code == \
 			(b"\x31\xC9",              # xor ecx,ecx
 			b"\xB8\x07\x00\x00\x00"    # mov eax,7
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xD8"                # mov ax,bx
 			b"\xC3",):                 # ret
 			return 0x209c01a9
-		elif byte_code == \
+		elif machine_code == \
 			(b"\x31\xC9",              # xor ecx,ecx
 			b"\xB8\x07\x00\x00\x00"    # mov eax,7
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xC8"                # mov ax,cx
 			b"\xC3",):                 # ret
 			return 0x0
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x01\x00\x00\x80"   # mov ax,0x80000001
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xD8"                # mov ax,bx
 			b"\xC3",):                 # ret
 			return 0x20000000
-		elif byte_code == \
+		elif machine_code == \
 			(b"\xB8\x01\x00\x00\x80"   # mov ax,0x80000001
 			b"\x0f\xa2"                # cpuid
 			b"\x89\xC8"                # mov ax,cx
@@ -175,7 +175,7 @@ class MockASM(ASM):
 
 		# get_ticks
 		# 32 bit
-		if byte_code == \
+		if machine_code == \
 			(b"\x55",         # push bp
 			b"\x89\xE5",     # mov bp,sp
 			b"\x31\xC0",     # xor ax,ax
@@ -189,7 +189,7 @@ class MockASM(ASM):
 			b"\xC3",):          # ret
 			raise Exception("FIXME: Add ticks for 32bit get_ticks")
 		# 64 bit
-		elif byte_code == \
+		elif machine_code == \
 			(b"\x48",         # dec ax
 			b"\x31\xC0",     # xor ax,ax
 			b"\x0F\xA2",     # cpuid
@@ -205,7 +205,7 @@ class MockASM(ASM):
 			else:
 				return 19237434253761
 
-		raise Exception("Unexpected byte code")
+		raise Exception("Unexpected machine code")
 
 	def free(self):
 		self.func = None
